# kata-checkout-order-total

./: ANALYSIS.md  ARCHITECTURE.md  HASKELL.SETUP.md
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml
haskell/: .dockerignore  .gitignore  ChangeLog.md  Discount.API.hs  Discount.hs  DiscountList.hs  DiscountListClient.hs  Discounts.json  Dockerfile  Item.API.hs  Item.hs  ItemList.hs  ItemListClient.hs  Items.json  LICENSE  Main.hs  README.md  Test.hs  TestBulkFlatPriceDiscount.hs  TestItem.hs  TestLimitedUpSaleFlatPriceDiscount.hs  TestLimitedUpSalePercentDiscount.hs  TestStandardDiscount.hs  TestUpSaleFlatPriceDiscount.hs  TestUpSalePercentDiscount.hs  Transaction.hs  build-google.sh  build-minikube.sh  build.sh  cabal.project  delete-from-docker.sh  delete-from-google-cloud.sh  delete-from-minikube.sh  deploy-to-docker.sh  deploy-to-google-cloud.sh  deploy-to-minikube.sh  hie.yaml  kata-checkout-order-total.cabal  kubernetes.yaml  linkerd.yaml  (+4 more)
haskell/.devcontainer/: Dockerfile  devcontainer.json
haskell/console/: Main.hs  console.cabal
haskell/discount-api/: Main.hs  discount-api.cabal
haskell/item-api/: Main.hs  item-api.cabal
haskell/shared/: Discount.hs  DiscountList.hs  DiscountListClient.hs  Item.hs  ItemList.hs  ItemListClient.hs  Transaction.hs  shared.cabal
haskell/test/: Main.hs  Setup.hs  test.cabal
haskell/test/suite/: TestBulkFlatPriceDiscount.hs  TestHarness.hs  TestItem.hs  TestLimitedUpSaleFlatPriceDiscount.hs  TestLimitedUpSalePercentDiscount.hs  TestStandardDiscount.hs  TestUpSaleFlatPriceDiscount.hs  TestUpSalePercentDiscount.hs
typescript/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  Dockerfile.application  Dockerfile.base  Dockerfile.discount-api  Dockerfile.item-api  application.Dockerfile  build.sh  discount-api.Dockerfile  discounts.json  docker.sh  item-api.Dockerfile  items.json  kubernetes.yaml  package-lock.json  package.json  remove.sh  tsconfig.application.json  tsconfig.console.json  tsconfig.discount.api.json  tsconfig.item.api.json  tsconfig.json  tsconfig.test.json  verify.sh  webpack.config.js
typescript/src/: api.client.ts  application.api.ts  application.ts  async.for.each.ts  console.register.file.list.txt  console.register.ts  currency.ts  date.ts  discount.api.ts  discount.list.client.ts  discount.ts  env.ts  item.api.ts  item.list.client.ts  item.ts  transaction.ts  typed.ts
typescript/test/: bulk.flat.price.discount.spec.ts  discount.serialization.spec.ts  discount.spec.ts  discount.type.factory.spec.ts  item.spec.ts  limited.up.sale.flat.price.discount.spec.ts  limited.up.sale.percent.discount.spec.ts  parameterized.ts  standard.discount.spec.ts  test.spec.ts  transaction.spec.ts  up.sale.flat.price.discount.spec.ts  up.sale.percent.discount.by.weight.spec.ts  up.sale.percent.discount.spec.ts
