cabal-version:       3.6
name:                kcot-shared
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/calledtoconstruct/kata-checkout-order-total
license:             BSD-3-Clause
license-file:        ../LICENSE
author:              Joseph Woolley
maintainer:          joe@calledtoconstruct.net
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md

library
  exposed-modules:      Discount,
                        DiscountList,
                        DiscountListClient,
                        Item,
                        ItemList,
                        ItemListClient,
                        Transaction
  build-depends:        base,
                        Cabal,
                        time,
                        aeson,
                        http-client,
                        http-types,
                        sort,
                        mtl,
                        utf8-string,
                        wai-cors,
                        scotty,
                        optparse-applicative
  hs-source-dirs:       ./
  default-language:     Haskell2010
  ghc-options:          -O2
                        -Wall
