cabal-version:       3.6
name:                test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/calledtoconstruct/kata-checkout-order-total
license:             BSD-3-Clause
license-file:        ../LICENSE
author:              Joseph Woolley
maintainer:          joe@calledtoconstruct.net
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md

library
  exposed-modules:      TestHarness,
                        TestBulkFlatPriceDiscount,
                        TestItem,
                        TestLimitedUpSaleFlatPriceDiscount,
                        TestLimitedUpSalePercentDiscount,
                        TestStandardDiscount,
                        TestUpSaleFlatPriceDiscount,
                        TestUpSalePercentDiscount
  build-depends:        base,
                        base-compat,
                        time,
                        aeson,
                        http-types,
                        http-client,
                        sort,
                        mtl,
                        utf8-string,
                        wai-cors,
                        scotty,
                        optparse-applicative,
                        kcot-shared
  hs-source-dirs:       suite

test-suite doctests
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  build-depends:        base,
                        test,
                        doctest-parallel >= 0.2.6
  hs-source-dirs:       ./
  default-language:     Haskell2010
  ghc-options:          -threaded
                        -O2
                        -Wall
